Horizontal scroll problem solved

--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,6 @@
 body{
   font-family: 'Poppins', sans-serif;
+  overflow-x: hidden !important;
 }
 *{
   scroll-behavior: smooth;
@@ -12,4 +13,9 @@ body{
 section{
   width: 100%;
   height: 100vh;
+}
+
+.align{
+  max-width: 100%;
+  overflow-x: hidden;
 }
